GET Individual machine models Route
